# bearbotics-pi-code

./: .gitignore  README.md  feed1.ffm  lauch-vlc.sh  launch-ffmpeg-rtmp-stream.sh  launch-ffplay.sh  launch-gstreamer-player.sh  launch-mplayer.sh  launch-vlc.sh  notes.txt  remote-viewing.bat  vlc-config.sdp
calibrate-camera/: CMakeLists.txt  README.md  argparse.hpp  compile_commands.json  main.cpp
hsv-viewer/: CMakeLists.txt  README.md  compile_commands.json  main.cpp
vision/: README.md  start-vision.sh
vision-manager/: Cargo.toml  README.md  gstreamer-pipelines.txt
vision-manager/src/: main.rs  remote_viewing.rs  vision.rs
vision/src/: CMakeLists.txt  argparse.hpp  compile_commands.json  error.cpp  error.h  gstreamer-config.cmake  logging.cpp  logging.h  main.cpp  mqtt.cpp  mqtt.h  remote_viewing.cpp  remote_viewing.h  util.cpp  util.h  vision.cpp  vision.h
vision/templates/: README.md
